31-May-2016 Takashi Yamanaka <takashi.yamanaka@cern.ch>
	* Add FatJets container delete
	
31-May-2016 Lawrence Lee <Lawrence.Lee.Jr@cern.ch>
	* Updating to ST-7-60 which fixes some issues with the sherpa reweighting and the muon interface with the MET tool
	* Tagging as 00-01-02 for a production

31-May-2016 Lawrence Lee <Lawrence.Lee.Jr@cern.ch>
	* Updated to 2.4.9, ST-7-59. Includes updated JES and MET recs
	* Tagging as 00-01-01

30-May-2016 Takashi Yamanaka <takashi.yamanaka@cern.ch>
	* Use only the leading photon in BuildSUSYObject
	* Add Sherpa v2.2 WZweight
	* Add fix for systematic variation

30-May-2016 Lawrence Lee <Lawrence.Lee.Jr@cern.ch>
	* Making merging step a little more user friendly with allBackgroundsNT flag
	* Changing default location of DSID in DS name
	* Default to filtering
	* Changed to cutfile13TeV (we're not at 8 TeV anymore!)
	* Turned off RJigsaw variables at factory level - currently done in post-processing
	* Updates to GRL setups
	* Set doFakes to False if not running on data

25-May-2016 Takashi Yamanaka <takashi.yamanaka@cern.ch>
	* Update JetSmearing in ZeroLeptonDataDrivenQCD

24-May-2016 Takashi Yamanaka <Takashi.Yamanaka@cern.ch>
	* Fixed ZeroLetptonCR3 crach
	* Changed primary vertex requirement order
	* Add new GRL for data15_13TeV and ilumical_histograms

23-May-2016 Lawrence Lee <Lawrence.Lee.Jr@cern.ch>
	* Adding mc15c input dataset files
	* Tagging as 00-01-00

18-May-2016 Takashi Yamanaka <takashi.yamanaka@cern.ch>
	* revert lep,ph SF 

13-May-2016 Takashi Yamanaka <takashi.yamanaka@cern.ch>
	* Added JetSmearing 

12-May-2016 Lawrence Lee <Lawrence.Lee.Jr@cern.ch>
	* Adding TST to output ntuple to understand effect of TST bug
	* README now points to input file that exists on eos

11-May-2016 Lawrence Lee <Lawrence.Lee.Jr@cern.ch>
	* Updating FilterUpdateMerge.py to make various options on by default to save a lot of headache!
	* Also added the ability to output to a separate location such as a large temp space

