@@ -68,11 +68,14 @@ bool PileUpRWProcessor::processEvent(xAOD::TEvent& event)
     (*pileupWeight)[2] = eventInfo->auxdata<float>("DOWN_PileupWeight");
   }
 
+  unsigned long long* PRWHash = new unsigned long long;
+  *PRWHash = m_PileupTool_CENTRAL->getPRWHash( *eventInfo );
+
   //std::cout << runnumber << " Pileup weights " << pileupWeight->at(0) << " " << pileupWeight->at(1) << " " << pileupWeight->at(2) << std::endl;
 
   xAOD::TStore* store = xAOD::TActiveStore::store();
   RETURN_CHECK("PileUpRWProcessor::processEvent",store->record(pileupWeight,"pileupWeights"));
-
+  RETURN_CHECK("PileUpRWProcessor::processEvent",store->record(PRWHash,"PRWHash"));
 
   return true;
 }
