@@ -107,7 +107,8 @@ class PhysObjProxyUtils
 		  unsigned int LumiBlockNumber,
 		  unsigned int veto, float weight, 
 		  std::vector<float>& normWeight, 
-		  std::vector<float>& pileupWeight, float genWeight, 
+		  std::vector<float>& pileupWeight, unsigned long long PRWHash,
+		  float genWeight, 
 		  float ttbarWeightHT, float ttbarWeightPt2, 
 		  float ttbarAvgPt, float WZweight,
 		  std::vector<float>& bTagWeight,
